--- a/Authentication/src/main/resources/application.yml
+++ b/Authentication/src/main/resources/application.yml
@@ -2,9 +2,9 @@ server:
   port: 8082
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/minorprojectdemo2
-    username: root
-    password: dakshdaksh
+    url: jdbc:mysql://sql6.freemysqlhosting.net:3306/sql6454651
+    username: sql6454651
+    password: iRS2JPrzDM
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     show-sql: true
@@ -12,3 +12,8 @@ spring:
       ddl-auto: update
   application:
     name: authentication
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://192.168.1.10:8761/eureka/
