--- a/Gateway/src/main/resources/application.yml
+++ b/Gateway/src/main/resources/application.yml
@@ -4,3 +4,8 @@ server:
 spring:
   application:
     name: gateway
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://192.168.1.10:8761/eureka/
