--- a/UserProject/src/main/resources/application.yml
+++ b/UserProject/src/main/resources/application.yml
@@ -3,9 +3,9 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/minorprojectdemo2
-    username: root
-    password: dakshdaksh
+    url: jdbc:mysql://sql6.freemysqlhosting.net:3306/sql6454651
+    username: sql6454651
+    password: iRS2JPrzDM
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     show-sql: true
@@ -23,4 +23,10 @@ spring:
 
 file:
   upload:
-    location: d:/Minor-Project/resources
+    location: /usr/local/data
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://192.168.1.10:8761/eureka/
+
