--- a/Authentication/src/main/resources/application.yml
+++ b/Authentication/src/main/resources/application.yml
@@ -16,4 +16,4 @@ spring:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://192.168.1.10:8761/eureka/
+      defaultZone: ${EUREKA_URL}
