--- a/UserProject/src/main/resources/application.yml
+++ b/UserProject/src/main/resources/application.yml
@@ -28,5 +28,5 @@ file:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://192.168.1.10:8761/eureka/
+      defaultZone: ${EUREKA_URL}
 
