--- a/Gateway/src/main/resources/application.yml
+++ b/Gateway/src/main/resources/application.yml
@@ -4,8 +4,18 @@ server:
 spring:
   application:
     name: gateway
+  cloud:
+    gateway:
+      globalcors:
+        corsConfigurations:
+          '[/**]':
+            allowedOrigins: "*"
+            allowedMethods:
+              - GET
+              - POST
 
 eureka:
   client:
     serviceUrl:
       defaultZone: ${EUREKA_URL}
+
